[package]
name = "first"
version = "0.1.0"
edition = "2021"

[lib]
name = "first"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = { version = "0.4.0", features = [] }
rand = "0.8.5"
plotters = "0.3"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "rough_big_o"
harness = false
